<resources>
    <string name="app_name">Planet Superheroes</string>
    <!--Strings para login-->

    <string name="ingresa_tus_datos">INGRESA TUS DATOS</string>
    <string name="mail">Mail</string>
    <string name="clave">Clave</string>
    <string name="olvide_contrasena">Olvidé mi contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrate">¿No tenés cuenta? <b>Regístrate</b></string>
    <string name="desc_google">Botón para iniciar sesión con Google</string>
    <string name="desc_facebook">Botón para iniciar sesión con Facebook</string>

    <!--Strings para Productos-->
    <string name="product_image_desc">Product Image</string>
    <string name="marvel_category">Marvel Category</string>
    <string name="dc_category">DC Category</string>

    <!--Strings para Info personal-->
    <string name="user_act_name">User</string>
    <string name="user_title">Info Personal</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="user_lastname">Apellido de usuario</string>
    <string name="user_email">Email de usuario</string>
    <string name="user_adress">Dirección de usuario</string>
    <string name="save_btn">Guardar cambios</string>
    <string name="img_cat">Imagen de Gatito</string>
    <string name="text_name_info">Nombre</string>
    <string name="text_lastname_info">Apellido</string>
    <string name="text_direction_info">Direccion</string>
    <string name="text_email_info">Email</string>
    <string name="label_name">Nombre</string>


    <!-- Strings para el formulario de contacto -->
    <string name="contact_title">¡Contáctanos!</string>
    <string name="contact_name_input">Ingrese un nombre</string>
    <string name="contact_email_input">Ingrese un email</string>
    <string name="contact_message_input">Escriba un Mensaje</string>
    <string name="contact_btn">Enviar Mensaje</string>

    <!-- Strings para la Actividad de Registro -->

    <string name="btn_registrar">REGÍSTRATE</string>
    <string name="decripción_logo">Logo de la aplicación Planet Superheroes</string>
    <string name="nombre_usuario">Nickname</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="text_contraseña">Contraseña</string>
    <string name="text_email">Email</string>
    <string name="text_login">¿Ya tienes una cuenta? <b>Inicia sesión aquí</b></string>
    <string name="google_button_description">Sign in with Google</string>
    <string name="facebook_button_description">Sign in with Facebook</string>
    <!-- Nuevos campos de texto -->
    <string name="hint_ingresar_nickname">Ingresar nickname</string>
    <string name="hint_ingresar_email">Ingresar email</string>
    <string name="hint_confirmar_email">Confirmar email</string>
    <string name="hint_ingresar_password">Ingresar password</string>
    <string name="hint_confirmar_password">Confirmar password</string>

    <!-- Descripciones para accesibilidad -->
    <string name="mostrar_ocultar_contraseña">Mostrar/Ocultar contraseña</string>
    <string name="informacion_contraseña">Información de seguridad de la contraseña</string>
    <string name="descripcion_logo">Logo de Planet Superheroes</string>


    <!-- Strings para la Actividad Main -->

    <string name="welcome_title">¡BIENVENIDOS A PLANET SUPER HEROES!</string>
    <string name="description_text">Sumérgete en el universo de tus héroes y villanos favoritos. Aquí encontrarás las últimas novedades y clásicos de Marvel y DC, listos para llevarte a aventuras épicas.\n\n¡Explora, descubre y disfruta de los mejores cómics en un solo lugar!</string>
    <string name="register_button">REGISTRARME</string>
    <string name="login_button">INICIAR SESIÓN</string>

    <!-- Títulos -->
    <string name="notifications_title">NOTIFICACIONES</string>

    <!-- Notificación 1 -->
    <string name="notification_1_title">¡Tu paquete llegó a destino!</string>
    <string name="notification_1_subtitle">¡Gracias por habernos elegido!</string>
    <string name="notification_1_subtitle2"> ¡Disfruta tu Compra!</string>

    <!-- Notificación 2 -->
    <string name="notification_2_title">15% OFF - Descuento Friends</string>
    <string name="notification_2_subtitle">Aprovecha la semana del amigo y obtené un descuento del 15% por tu compra</string>

    <!-- Notificación 3 -->
    <string name="notification_3_title">¡Compra Rechazada!</string>
    <string name="notification_3_subtitle">No se pudo completar la compra</string>

    <!-- Notificación 4 -->
    <string name="notification_4_title">¡Tu paquete está en camino!</string>
    <string name="notification_4_subtitle">La compra #138439 tardará entre 5 a 7 días hábiles</string>

    <!-- Botón de atrás y ajustes -->
    <string name="back_button_content_description">Volver</string>
    <string name="settings_button_content_description">Ajustes</string>

    <!-- Strings para la Actividad Productos Destacados -->
    <string name="destacados">Destacados</string>
    <string name="pre_venta">Pre-Venta</string>
    <string name="_4_9">4.9</string>
    <string name="nombre">Nombre</string>
    <string name="todo">TODO</string>

    <!--Strings para Settings-->
    <string name="back">back</string>
    <string name="settings">Settings</string>
    <string name="emilce_robles">Emilce Robles</string>
    <string name="emi12_gmail_com">emi12@gmail.com</string>
    <string name="cuenta">Cuenta</string>
    <string name="light_dark_mode">Light / Dark Mode</string>
    <string name="info_personal">Info Personal</string>
    <string name="imagen_perfil">Imagen Perfil</string>
    <string name="dark_light">DARK/LIGHT</string>
    <string name="iconousuario">IconoUsuario</string>
    <string name="privacidad_y_seguridad">Privacidad y Seguridad</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="contrasena">Contraseña</string>
    <string name="flechainfopersonal">flechaInfoPersonal</string>
    <string name="campanaicono">CampanaIcono</string>
    <string name="iconocontrasena">iconoContrasena</string>
    <string name="flechabotoncontrasena">flechaBotonContrasena</string>
    <string name="contrasenia">contraseña</string>
    <string name="contrasena2">contraseña</string>

    <!-- Strings para la Actividad Home -->
    <string name="user_hello">Hi User!</string>
    <string name="home_title">Elige una categoria</string>
    <string name="btn_seemore">Ver más</string>
    <string name="faq_nav">Preguntas Frecuentes</string>
    <string name="contact_nav">Contactanos</string>
    <string name="Soporte">Soporte</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="flechabotonpreguntas">flechabotonpreguntas</string>
    <string name="contactanos">Contactanos</string>
    <string name="flechabotoncontactanos">flechacontactanos</string>
    <string name="terminos_condiciones">Términos y Concidiciones</string>
    <string name="flechabotonterminos">botonterminos\n</string>
    <string name="iconocontacto">icono contacto</string>
    <string name="icono_preguntas">icono preguntas</string>
    <string name="icono_terminos">icono terminos</string>
    <string name="icono_chico_user">icono chico user</string>
    <string name="mas_populares">Más populares</string>
    <string name="gwenpool_description">New comic</string>

    <!-- Descripciones para accesibilidad -->
    <string name="user_image_desc">Imagen de perfil del usuario</string>
    <string name="notification_desc">Botón de notificaciones</string>
    <string name="cart_desc">Botón del carrito de compras</string>
    <string name="deadpool_image_desc">Imagen de Deadpool</string>
    <string name="gwenpool_image_desc">Imagen de Gwenpool</string>

    <!-- Cómics -->
    <string name="deadpool_title">Deadpool</string>
    <string name="gwenpool_title">Gwenpool</string>
    <string name="bow_to_king">Bow to the King</string>
    <string name="strikes_back">Strikes Back</string>
    <string name="rating_4_9">4.9</string>
    <string name="historial_de_compras">Historial de Compras</string>

    <!-- Checkout -->
    <string name="checkout_title">CHECKOUT</string>
    <string name="delivery_address">Dirección de envío</string>
    <string name="delivery_address_example">Humberto Primo N°680 \nPiso 2, oficina 22 \nCórdoba Capital</string>
    <string name="payment_method">Métodos de pago</string>
    <string name="payment_method_1">Tarjeta #1: Naranja</string>
    <string name="payment_method_2">Tarjeta #2: Visa</string>
    <string name="detail_total">Detalle total</string>
    <string name="subtotal">Subtotal: $48000</string>
    <string name="delivery">Delivery: $1000</string>
    <string name="total">Total: $49000</string>
    <string name="btn_comprar">COMPRAR</string>
    <string name="payment_card_1">Payment card 1</string>
    <string name="payment_card_2">Payment card 2</string>
    <string name="settings_icon">Settings icon</string>

    <!-- Strings para Cart -->
    <string name="cart_icon_desc">Carrito de compras</string>
    <string name="plus_symbol">+</string>
    <string name="zero_symbol">0</string>
    <string name="minus_symbol">-</string>

    <!-- Strings para Logout -->
    <string name="logout">Cerrar Sesión</string>
    <string name="imagen_de_carrito">imagen de carrito</string>
    <string name="flechahistorialcompra">flecha_historial_compra</string>
</resources>