<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    android:padding="40dp"
    tools:context=".infoPersonal">

    <ImageView
        android:id="@+id/imageViewContact"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/img_cat"
        android:src="@drawable/gatitoinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/bangersregular"
        android:hint="@string/user_title"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nombre -->
    <TextView
        android:id="@+id/textViewnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:text="@string/text_name_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/imageViewContact" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/info_personal_border"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/textdellabedlinfoPersonal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewnombre" />

    <!-- Apellido -->
    <TextView
        android:id="@+id/textViewapellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/text_lastname_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextlastName"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <EditText
        android:id="@+id/editTextlastName"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints="name"
        android:background="@drawable/info_personal_border"
        android:hint="@string/user_lastname"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textColorHint="@color/textdellabedlinfoPersonal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewapellido" />

    <!-- Email -->
    <TextView
        android:id="@+id/textViewemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:text="@string/text_email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextlastName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints="email"
        android:background="@drawable/info_personal_border"
        android:hint="@string/user_email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/textdellabedlinfoPersonal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewemail" />

    <!-- Dirección -->
    <TextView
        android:id="@+id/textViewdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:text="@string/text_direction_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextAdress"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <EditText
        android:id="@+id/editTextAdress"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="adress"
        android:background="@drawable/info_personal_border"
        android:hint="@string/user_adress"
        android:textColor="@color/black"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/textdellabedlinfoPersonal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewdireccion" />

    <!-- Botón -->
    <Button
        android:id="@+id/btnGuardarCambios"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save_btn"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAdress" />

</androidx.constraintlayout.widget.ConstraintLayout>

